[package]
name = "rax-nav"
description = "Stack navigation for rax: a signal-backed route stack and a routes view."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-reactive = { path = "../rax-reactive" }
rax-view = { path = "../rax-view" }
rax-anim = { path = "../rax-anim" }
rax-dom = { path = "../rax-dom" }

[dev-dependencies]
rax-dom = { path = "../rax-dom" }
rax-runtime = { path = "../rax-runtime" }
rax-test = { path = "../rax-test" }
