[package]
name = "rax-net"
description = "HTTP client abstraction for rax, returning reactive Resources."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
rax-reactive = { path = "../rax-reactive" }
rax-async = { path = "../rax-async" }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
