[package]
name = "rax-sqlite"
description = "SQLite storage for rax apps, backed by rusqlite with a bundled SQLite."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rax-reactive = { path = "../rax-reactive" }
