[package]
publish = false
name = "raxon-anim"
description = "Animation engine for rax: tweened animated signals driven by the frame loop."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-reactive = { path = "../raxon-reactive" }
