[package]
publish = false
name = "raxon-async"
description = "UI-thread async executor and async-aware Resource for the rax framework."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-reactive = { path = "../raxon-reactive" }
futures = { version = "0.3", default-features = false, features = ["executor", "std"] }
