[package]
publish = false
name = "raxon-dom"
description = "Retained element tree, widget/mutation model, and render backend seam for rax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core" }
raxon-reactive = { path = "../raxon-reactive" }
