[package]
publish = false
name = "raxon-i18n"
description = "Internationalization (i18n) helpers for rax."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
raxon-reactive = { path = "../raxon-reactive" }
