[package]
publish = false
name = "raxon-intl"
description = "Internationalization for rax: a reactive, runtime-switchable message catalog."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-reactive = { path = "../raxon-reactive" }
