[package]
publish = false
name = "raxon-ios"
description = "iOS (UIKit) backend for rax, implemented in pure Rust via objc2."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
# objc2 interop requires unsafe; allow it in this crate only.

[dependencies]
raxon-core = { path = "../raxon-core" }
raxon-dom = { path = "../raxon-dom" }
raxon-runtime = { path = "../raxon-runtime" }
raxon-view = { path = "../raxon-view" }
raxon-store = { path = "../raxon-store" }
raxon-net = { path = "../raxon-net" }
raxon-plugin = { path = "../raxon-plugin" }

# UIKit is only present on Apple mobile targets; gate the bindings so the rest
# of the workspace still builds on the host.
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSObject",
    "NSNotification",
    "NSThread",
    "NSRunLoop",
    "NSUserDefaults",
    "NSData",
] }
objc2-ui-kit = { version = "0.3", features = [
    "UIResponder",
    "UIView",
    "UILabel",
    "UIButton",
    "UIControl",
    "UIColor",
    "UIFont",
    "UIScreen",
    "UIWindow",
    "UIViewController",
    "UIApplication",
    "UIGeometry",
    "UIImageView",
    "UIImage",
    "UISwitch",
    "UISlider",
    "UISegmentedControl",
    "UIStepper",
    "UITextField",
    "UITextView",
    "UIGestureRecognizer",
    "UITapGestureRecognizer",
    "UILongPressGestureRecognizer",
    "UIPanGestureRecognizer",
    "UIPinchGestureRecognizer",
    "UIRotationGestureRecognizer",
    "UIScrollView",
    "UIActivityIndicatorView",
    "UIProgressView",
    "UITraitCollection",
    "UIInterface",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CADisplayLink",
    "CALayer",
    "CAGradientLayer",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGColor"] }
block2 = "0.6"
futures = { version = "0.3", default-features = false, features = ["executor", "std"] }
ureq = { version = "2", features = [] }
