[package]
publish = false
name = "raxon-net"
description = "HTTP client abstraction for rax, returning reactive Resources."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-reactive = { path = "../raxon-reactive" }
raxon-async = { path = "../raxon-async" }
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
ureq = { version = "2", features = [] }
serde = { version = "1" }
serde_json = { version = "1" }
