[package]
publish = false
name = "raxon-runtime"
description = "App driver for rax: mounts a view, runs layout, drains events, and drives frames."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core" }
raxon-dom = { path = "../raxon-dom" }
raxon-layout = { path = "../raxon-layout" }
raxon-reactive = { path = "../raxon-reactive" }
raxon-async = { path = "../raxon-async" }
raxon-anim = { path = "../raxon-anim" }
raxon-view = { path = "../raxon-view" }
