[package]
publish = false
name = "raxon-view"
description = "Declarative, macro-free typed view builder for rax. Lowers to the rax-dom element tree."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[dependencies]
raxon-core = { path = "../raxon-core" }
raxon-dom = { path = "../raxon-dom" }
raxon-reactive = { path = "../raxon-reactive" }
raxon-net = { path = "../raxon-net" }
raxon-async = { path = "../raxon-async" }
raxon-anim = { path = "../raxon-anim" }
