[package]
name = "raxon"
description = "A reactive, signal-driven native UI framework for Rust — iOS today, Android and more coming."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/1homsi/raxon"
homepage = "https://github.com/1homsi/raxon"
keywords = ["ui", "native", "ios", "reactive", "mobile"]
categories = ["gui", "os::macos-apis"]

[lints.rust]
missing_docs = "warn"

[features]
default = []
# Pulls in the host-side testing harness (`rax::test`).
testing = ["dep:raxon-test"]

[dependencies]
raxon-core = { path = "../raxon-core", version = "0.0.1" }
raxon-reactive = { path = "../raxon-reactive", version = "0.0.1" }
raxon-view = { path = "../raxon-view", version = "0.0.1" }
raxon-runtime = { path = "../raxon-runtime", version = "0.0.1" }
raxon-nav = { path = "../raxon-nav", version = "0.0.1" }
raxon-store = { path = "../raxon-store", version = "0.0.1" }
raxon-net = { path = "../raxon-net", version = "0.0.1" }
raxon-anim = { path = "../raxon-anim", version = "0.0.1" }
raxon-async = { path = "../raxon-async", version = "0.0.1" }
raxon-intl = { path = "../raxon-intl", version = "0.0.1" }
raxon-style = { path = "../raxon-style", version = "0.0.1" }
raxon-plugin = { path = "../raxon-plugin", version = "0.0.1" }
raxon-keychain = { path = "../raxon-keychain", version = "0.0.1" }
raxon-test = { path = "../raxon-test", version = "0.0.1", optional = true }

# The iOS backend only exists on Apple mobile targets; gate it so raxon builds
# everywhere (host tests, future desktop/web) without dragging in UIKit.
[target.'cfg(target_os = "ios")'.dependencies]
raxon-ios = { path = "../raxon-ios", version = "0.0.1" }
