[package]
name = "raxon"
description = "A reactive, signal-driven native UI framework for Rust."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/1homsi/raxon"
homepage = "https://github.com/1homsi/raxon"
keywords = ["ui", "native", "ios", "reactive", "mobile"]
categories = ["gui", "os::macos-apis"]

[lints.rust]
missing_docs = "warn"

[features]
default = []
testing = []

[dependencies]
base64 = "0.22"
futures = { version = "0.3", default-features = false, features = ["executor", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
taffy = "0.7"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
ureq = { version = "2", default-features = false, features = [] }

[target.'cfg(not(any(target_os = "android", all(target_arch = "wasm32", target_os = "unknown"))))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }

# Web target: real fetch + WebSocket via the browser, through gloo-net (which
# wraps web-sys). wasm-only — native targets keep ureq/tungstenite.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-net = { version = "0.6", default-features = false, features = ["http", "websocket"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSDate",
    "NSString",
    "NSObject",
    "NSNotification",
    "NSThread",
    "NSRunLoop",
    "NSUserDefaults",
    "NSData",
] }
objc2-ui-kit = { version = "0.3", features = [
    "UIResponder",
    "UIView",
    "UILabel",
    "UIButton",
    "UIControl",
    "UIColor",
    "UIFont",
    "UIScreen",
    "UIWindow",
    "UIViewController",
    "UIApplication",
    "UIGeometry",
    "UIImageView",
    "UIImage",
    "UISwitch",
    "UISlider",
    "UISegmentedControl",
    "UIStepper",
    "UIDatePicker",
    "UITextField",
    "UITextView",
    "UIGestureRecognizer",
    "UITapGestureRecognizer",
    "UILongPressGestureRecognizer",
    "UIPanGestureRecognizer",
    "UIPinchGestureRecognizer",
    "UIRotationGestureRecognizer",
    "UIScrollView",
    "UIActivityIndicatorView",
    "UIProgressView",
    "UITraitCollection",
    "UIInterface",
] }
objc2-quartz-core = { version = "0.3", features = [
    "CADisplayLink",
    "CALayer",
    "CAGradientLayer",
    "CAShapeLayer",
    "CATextLayer",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGColor", "CGPath"] }
block2 = "0.6"
